# rtabmap-realsense

./: .gitignore  LICENCE  README.md
doc/: How to connect the usb device to WSL.md
docker/: Dockerfile  docker-compose.yaml
src/: tracking.py
src/rtab_realsense/: CMakeLists.txt  package.xml  setup.py
src/rtab_realsense/launch/: 1_record_realsense.launch.py  2_rtabmap_realsense.launch.py  3_record_rtabmap.launch.py  4_play_bag.launch.py
