<package format="3">
  <name>my_realsense_package</name>
  <version>0.1.0</version>
  <description>ROS 2 package for RealSense and RTAB-Map integration</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>